<resources>
    <string name="app_name">CookBook</string>
    <string name="app_name_preupdated">CookBookPreUpdated</string>

    <string name="search_your_recipes">Поиск рецептов</string>
    <string name="meal_categories">Еда по категориям</string>


    <string name="favorites">Избранное</string>
    <string name="recipes">Рецепты</string>
    <string name="cookwith">Приготовить из</string>
    <string name="helper">Fit-рекомендации</string>
    <string name="mealplanner">Планировать приёмы пищи</string>
    <string name="shoppingcart">Список покупок</string>
    <string name="settings">Настройки</string>


    <string name="portion">В одной порции</string>
    <string name="cooktime">Время приготовления</string>
    <string name="proteins">Белки гр.</string>
    <string name="fats">Жиры гр.</string>
    <string name="carbs">Углеводы гр.</string>
    <string name="calories">Калории</string>
    <string name="category">Категория</string>
    <string name="country">Страна</string>
    <string name="instructions">Инструкции</string>
    <string name="dot_loading">...</string>
    <string name="Ingredients">Ингридиенты</string>

    <string name="IngredientList">Список ингредиентов</string>
    <string name="emptyList">Список пуст</string>
    <string name="notEnoughData">Недостаточно данных</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="addBtnText">Добавить в список</string>
    <string name="searchBtnText">Найти рецепты</string>

    <string name="quantityHint">Количество</string>
    <string name="productNameHint">Название продукта</string>

    <string name="cookwithIngredientHint">Название ингредиента</string>

    <string name="userinfo">Информация о пользователе: </string>

    <string name="age">Возраст: </string>
    <string name="height">Текущий рост: </string>
    <string name="weight">Текущий вес: </string>
    <string name="lifestyle">Образ жизни: </string>
    <string name="bmistatus">Статус: </string>

    <string name="changeInfo">Обновить информацию</string>
    <string name="registerNewMeals">Добавить новые приёмы пищи</string>

    <string name="goaltext">Установить цель:</string>
    <string name="recomendationsText">Список рекомендаций:</string>
    <string name="weightHistory">График веса</string>
    <string name="caloriesGoal">Рекомендуемая суточная норма калорий :</string>

    <string name="caloriesHistory">Статистика</string>

    <string-array name="goalSpinnerArray">
        <item>Поддержание веса</item>
        <item>Набор веса</item>
        <item>Похудение</item>
    </string-array>

    <string-array name="lifeStyle">
        <item>Малоактивный</item>
        <item>Средняя активность</item>
        <item>Активный</item>
    </string-array>

    <string-array name="months">
        <item>Янв.</item>
        <item>Февр.</item>
        <item>Март</item>
        <item>Апр.</item>
        <item>Май.</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Авг.</item>
        <item>Сент.</item>
        <item>Окт.</item>
        <item>Ноя.</item>
        <item>Дек.</item>
    </string-array>
</resources>