<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            >



        <TextView
            android:id="@+id/headerinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userinfo"
            android:paddingStart="8dp"


            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/ic_info"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/header"
            android:layout_below="@id/headerinfo"
            android:paddingTop="5dp"
            android:layout_marginBottom="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="7dp"

                        >

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="105dp"
                            android:src="@drawable/ic_baseline_android_24"
                            android:scaleType="fitCenter"
                            android:background="@color/colorAccent"
                            >
                        </ImageView>

                    </androidx.cardview.widget.CardView>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:text="@string/age"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:paddingStart="10dp"
                            android:text="26"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:paddingStart="10dp"
                            android:text="лет"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:text="@string/height"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:paddingStart="10dp"
                            android:text="180"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:paddingStart="10dp"
                            android:text="см"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="2dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:text="@string/height"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:paddingStart="10dp"
                            android:text="75"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:paddingStart="10dp"
                            android:text="кг"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:text="@string/lifestyle"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:paddingStart="10dp"
                            android:text="активный"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:text="@string/bmistatus"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:paddingStart="10dp"
                            android:text="Вес в пределах нормы"
                            android:textColor="#008000"
                            android:textSize="16sp"
                            android:textStyle="bold">
                        </TextView>


                    </LinearLayout>


                </LinearLayout>



            </LinearLayout>


        </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/updateSelfInfoBtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/header"

                android:layout_marginEnd="5dp"
                android:text="@string/changeInfo"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/button_background"
                android:layout_alignParentEnd="true"

                android:adjustViewBounds="false"

                />

            <TextView
                android:id="@+id/goaltext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goaltext"
                android:paddingStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/updateSelfInfoBtn"

                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                 />

            <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/goaltext"
                android:padding="5dp"
                app:cardCornerRadius="7dp"
                app:cardUseCompatPadding="true"
                android:id="@+id/belowspinner"
                >

                <Spinner
                    android:id="@+id/goalSpinner"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/goalSpinnerArray"
                    >

                </Spinner>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/recomendationstext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recomendationsText"
                android:paddingStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/belowspinner"

                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/recomendationCard"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recomendationstext"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textcalories"
                        android:text="@string/caloriesGoal"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:paddingTop="14dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/caloriesGoal"
                        android:text="@string/dot_loading"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="14dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerRec"
                android:foregroundGravity="center"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:layout_below="@id/recomendationCard"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="120dp" >

            </androidx.viewpager.widget.ViewPager>

            <include android:id="@+id/shimmerMeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recomendationCard"
                layout="@layout/item_view_pager_header_shimmer"
                />


            <TextView
                android:id="@+id/historytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weightHistory"
                android:paddingStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/viewPagerRec"

                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center_horizontal"

                android:drawablePadding="10dp"
                />



            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/weightChart"
                android:layout_below="@id/historytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"

                >

            </com.github.mikephil.charting.charts.LineChart>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>